# dana-cup

./: .env  .gitignore  LICENSE  README.md  db.sqlite3  pyproject.toml  requirements.txt
accounts/: backends.py  exceptions.py  schemas.py  views.py
accounts/migrations/: 0001_initial.py
adminpanel/: models.py  schemas.py  service.py  views.py
cart/: admin.py  models.py  schemas.py  views.py
cart/migrations/: 0001_initial.py  0002_initial.py
config/: api.py  settings.py  urls.py
core/: authenticaiton.py  types.py
core/management/commands/: populate.py
core/utils/: __init__.py  common.py  datetime.py  fake.py  pytest.py  rich.py  string.py
orders/: admin.py  models.py  schemas.py  views.py
orders/migrations/: 0001_initial.py  0002_order_status.py
products/: admin.py  factories.py  filters.py  models.py  schemas.py  service.py  views.py
products/migrations/: 0001_initial.py
